# remove_comments

./: Cargo.toml  README.md  lib.rs
src/: input.txt  main.rs  old.rs  simple.rs
src/misc/: basic.rs  clean.rs  parser.rs  remove_everything.rs  remove_space.rs
