[package]
name = "remove_comments"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
description = "Remove Comments"
repository = "https://github.com/173duprot/rcm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.3"

[lib]
name = "remove_comments"
path = "lib.rs"
